--- a/SVN.NeuralNetwork.csproj
+++ b/SVN.NeuralNetwork.csproj
@@ -48,10 +48,10 @@
     <Compile Include="Helpers\Input.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Structures\Bias.cs" />
-    <Compile Include="Structures\Edge.cs" />
+    <Compile Include="Structures\Connection.cs" />
     <Compile Include="Structures\Layer.cs" />
     <Compile Include="Structures\Network.cs" />
-    <Compile Include="Structures\Node.cs" />
+    <Compile Include="Structures\Neuron.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="nuget.nuspec" />
