--- a/SVN.NeuralNetwork.csproj
+++ b/SVN.NeuralNetwork.csproj
@@ -47,11 +47,17 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="Helpers\Input.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Structures\Bias.cs" />
+    <Compile Include="Structures\NeuronBias.cs" />
     <Compile Include="Structures\Connection.cs" />
+    <Compile Include="Structures\LayerHidden.cs" />
+    <Compile Include="Structures\LayerInput.cs" />
     <Compile Include="Structures\Layer.cs" />
+    <Compile Include="Structures\LayerOutput.cs" />
     <Compile Include="Structures\Network.cs" />
     <Compile Include="Structures\Neuron.cs" />
+    <Compile Include="Structures\NeuronHidden.cs" />
+    <Compile Include="Structures\NeuronInput.cs" />
+    <Compile Include="Structures\NeuronOutput.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="nuget.nuspec" />
