--- a/SVN.NeuralNetwork.csproj
+++ b/SVN.NeuralNetwork.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\GuiType.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Helpers\Input.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
