--- a/SVN.NeuralNetwork.csproj
+++ b/SVN.NeuralNetwork.csproj
@@ -77,6 +77,10 @@
       <Project>{d192822c-d9f1-4acc-abe6-91ac8575330a}</Project>
       <Name>SVN.Drawing</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SVN.Math\SVN.Math.csproj">
+      <Project>{00D32E34-D99C-489F-A8DB-6B96A5F05035}</Project>
+      <Name>SVN.Math</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
