--- a/SVN.NeuralNetwork.csproj
+++ b/SVN.NeuralNetwork.csproj
@@ -36,6 +36,9 @@
     <Reference Include="System.Drawing.Primitives, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Drawing.Primitives.4.3.0\lib\net45\System.Drawing.Primitives.dll</HintPath>
     </Reference>
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,6 +50,9 @@
     <Compile Include="Enums\GuiType.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Helpers\Input.cs" />
+    <Compile Include="Helpers\TrainingData.cs" />
+    <Compile Include="Helpers\TrainingDataInput.cs" />
+    <Compile Include="Helpers\TrainingDataOutput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Structures\NeuronBias.cs" />
     <Compile Include="Structures\Connection.cs" />
@@ -80,6 +86,10 @@
     <ProjectReference Include="..\SVN.Math\SVN.Math.csproj">
       <Project>{00D32E34-D99C-489F-A8DB-6B96A5F05035}</Project>
       <Name>SVN.Math</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SVN.Tasks\SVN.Tasks.csproj">
+      <Project>{5cccf2b2-0f68-4996-8c3d-3b5569ccd9f3}</Project>
+      <Name>SVN.Tasks</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
